@@ -606,12 +606,12 @@ def test_post_data(anonymous, exp_anon, draft, exp_live, bhd_tracker_jobs, mock_
     argvalues=(
         ("Collector's Edition", 'Collector'),
         ("Director's Cut", 'Director'),
-        ('DC', 'Director'),
-        ('Extended Edition', 'Extended'),
+        ('Extended Cut', 'Extended'),
         ('Limited', 'Limited'),
         ('Special Edition', 'Special'),
         ('Theatrical Cut', 'Theatrical'),
         ('Uncut', 'Uncut'),
+        ('Uncensored', 'Uncut'),
         ('Unrated', 'Unrated'),
         ('Super Duper Custom Cut', None),
         ('', None),
